--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>upsideDownMarshmallow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container mt-5">
 
@@ -21,10 +23,12 @@
 
         <div class="mt-4">
             <label for="aiOutput" class="form-label">AI's Output</label>
-            <textarea class="form-control" id="aiOutput" rows="5" readonly placeholder="AI's output will appear here..."></textarea>
+            <textarea class="form-control" id="aiOutput" rows="5" readonly
+                placeholder="AI's output will appear here..."></textarea>
         </div>
     </div>
 
-
+    <script type="module" src="script.js"></script>
 </body>
+
 </html>
